--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src"
+  },
+  "dependencies": {
+    "pug": "3.0.2"
   }
 }
