--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src"
+    "start": "node --require dotenv/config src",
+    "dev": "nodemon --ext js,json,pug --require dotenv/config src dotenv_config_path=.env.development"
   },
   "dependencies": {
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
     "pug": "3.0.2"
+  },
+  "devDependencies": {
+    "@types/express": "4.17.11",
+    "nodemon": "2.0.7"
   }
 }
