--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "mongoose": "5.11.19",
     "pug": "3.0.2"
   },
   "devDependencies": {
     "@types/express": "4.17.11",
+    "@types/mongoose": "5.10.3",
     "nodemon": "2.0.7"
   }
 }
