--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "mongoose": "5.11.19",
+    "passport": "0.4.1",
+    "passport-local": "1.0.0",
     "pug": "3.0.2"
   },
   "devDependencies": {
     "@types/express": "4.17.11",
     "@types/mongoose": "5.10.3",
+    "@types/passport": "1.0.6",
+    "@types/passport-local": "1.0.33",
+    "express-session": "1.17.1",
     "nodemon": "2.0.7"
   }
 }
