--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "8.2.0",
     "express": "4.17.1",
+    "express-session": "1.17.1",
     "mongoose": "5.11.19",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/express": "4.17.11",
+    "@types/express-session": "1.17.3",
     "@types/mongoose": "5.10.3",
     "@types/passport": "1.0.6",
     "@types/passport-local": "1.0.33",
