--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "play": "nodemon --ext js,json,pug --require dotenv/config src/play dotenv_config_path=.env.development"
   },
   "dependencies": {
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "express-session": "1.17.1",
-    "mongoose": "5.11.19",
+    "mongoose": "^5.11.19",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "pug": "3.0.2"
@@ -23,9 +23,9 @@
   "devDependencies": {
     "@types/express": "4.17.11",
     "@types/express-session": "1.17.3",
-    "@types/mongoose": "5.10.3",
+    "@types/mongoose": "^5.10.3",
     "@types/passport": "1.0.6",
     "@types/passport-local": "1.0.33",
-    "nodemon": "2.0.7"
+    "nodemon": "^2.0.7"
   }
 }
